# ASL_Finger_Spelling_CNN

./: .gitignore  main.py  pyproject.toml  todo.md
client_code/: capture_camera.py  get_camera.py  model_handling.py
src/: data_handling.py  hyperparameters.py  model.py  model_training.py
