[project]
name = "torch-hyperparam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.20",
    "kagglehub>=0.3.12",
    "mlflow>=3.3.0",
    "opencv-python>=4.12.0.88",
    "optuna>=4.5.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
